kustomize/base/svc_wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress

spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
